[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibroadcast"
version = "2.0.0.dev0"
description = "Python client for working with iBroadcast music collections"
license = "Unlicense"
authors = [{name = "Curtis Rueden", email = "curtis@rueden.us"}]
readme = "README.md"
keywords = ["music", "ibroadcast", "collection", "upload", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8"
dependencies = [
    "requests>=2.24.0",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "ruff",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/ctrueden/ibroadcast-python"
documentation = "https://github.com/ctrueden/ibroadcast-python/blob/main/README.md"
source = "https://github.com/ctrueden/ibroadcast-python"
download = "https://pypi.org/project/ibroadcast/"
tracker = "https://github.com/ctrueden/ibroadcast-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 88
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = ["bin", "build", "dist"]

#[tool.ruff.lint]
#extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (unused import violation) in __init__.py.
"__init__.py" = ["F401"]
